added title screen

--- a/Console Conquerors!.vcxproj
+++ b/Console Conquerors!.vcxproj
@@ -143,6 +143,9 @@
     <ClInclude Include="Tower.h" />
     <ClInclude Include="Unit.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Title.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
