--- a/Console Conquerors!.vcxproj.filters
+++ b/Console Conquerors!.vcxproj.filters
@@ -59,5 +59,18 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="Title.txt" />
+    <Text Include="newGame.txt" />
+    <Text Include="loadGame.txt" />
+    <Text Include="instructions.txt" />
+    <Text Include="newGameHeader.txt" />
+    <Text Include="selectDifficulty.txt" />
+    <Text Include="easy.txt" />
+    <Text Include="medium.txt" />
+    <Text Include="hard.txt" />
+    <Text Include="hardSelected.txt" />
+    <Text Include="fortifiedPosition.txt" />
+    <Text Include="fort.txt" />
+    <Text Include="tower.txt" />
+    <Text Include="castle.txt" />
   </ItemGroup>
 </Project>
