Game class additions/new starting window instructions

--- a/Console Conquerors!.vcxproj
+++ b/Console Conquerors!.vcxproj
@@ -145,6 +145,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="castle.txt" />
+    <Text Include="cursor.txt" />
     <Text Include="easy.txt" />
     <Text Include="fort.txt" />
     <Text Include="fortifiedPosition.txt" />
