completed unit bar + bug fixes

--- a/Console Conquerors!.vcxproj
+++ b/Console Conquerors!.vcxproj
@@ -144,9 +144,15 @@
     <ClInclude Include="Unit.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="ArcherunitBar.txt" />
+    <Text Include="Brute0.txt" />
+    <Text Include="Brute1.txt" />
+    <Text Include="BruteunitBar.txt" />
     <Text Include="castle.txt" />
+    <Text Include="CatapultunitBar.txt" />
     <Text Include="cursor.txt" />
     <Text Include="easy.txt" />
+    <Text Include="EngineerunitBar.txt" />
     <Text Include="fort.txt" />
     <Text Include="fortifiedPosition.txt" />
     <Text Include="hard.txt" />
@@ -157,8 +163,15 @@
     <Text Include="newGame.txt" />
     <Text Include="newGameHeader.txt" />
     <Text Include="selectDifficulty.txt" />
+    <Text Include="Shield Man0.txt" />
+    <Text Include="Shield Man1.txt" />
+    <Text Include="Shield ManunitBar.txt" />
+    <Text Include="Sword Guy!0.txt" />
+    <Text Include="Sword Guy!1.txt" />
+    <Text Include="Sword Guy!unitBar.txt" />
     <Text Include="Title.txt" />
     <Text Include="tower.txt" />
+    <Text Include="unitBarBox.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
